flux/apps/podinfo/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-cilium
  namespace: podinfo
spec:
  ingressClassName: cilium
  rules:
    - host: podinfo.dev-cluster.local  # Will be patched per environment
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
